--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>PZCussons Loyalti Retail</title>
   </head>
   <body>
     <noscript>
